"main" css class moved down to avoid overlapping with navbar

--- a/style/style.css
+++ b/style/style.css
@@ -3,3 +3,7 @@
 body {
     background-color: #262626;
 }
+
+.main {
+    top: 60px;
+}
